refactor(distributed-cache-engine): apply modern Java 21 features and pattern matching